Added A LOT of stuff... did styling too

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://pjhg14.github.io/phgrahamjr-website",
+  "homepage": "http://pjhg14.github.io/",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
