Added final fonts, started css themeing, started on skeleton-loading cards

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "PG Website",
+  "name": "Paul H Graham Jr Personal Website",
   "icons": [
     {
       "src": "favicon.ico",
