Restructured contact links, fixed filter bar, start of deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://pjhg14.github.io/",
+  "homepage": "https://paulgrahamjr.com/",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
