--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "PG Website",
+  "name": "Paul H Graham Jr Personal Website",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "assets/initial-logo-dark.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
