--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "PG Website",
-  "name": "Paul H Graham Jr Personal Website",
+  "name": "Paul H Graham Jr's Personal Website",
   "icons": [
     {
       "src": "assets/initial-logo-dark.png",
@@ -8,18 +8,18 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "assets/initial-logo-dark-lrg.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "assets/initial-logo-dark-lrg.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#7bea5d",
+  "background_color": "#262626"
 }
