--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "sass": "^1.45.2",
     "typescript": "^4.5.4",
     "web-vitals": "^1.1.2"
   },
